test/compile-fail/resolution/pub/in-non-ancestral-super/top.rhdl
mod a {
    pub(in super::c) struct b {}
}
mod c {}
